# new_mohabai_backend

backend/: .env.example  alembic.ini  pyproject.toml  start.bat
backend/alembic/: env.py
backend/alembic/versions/: 1b02d855e00d_initial.py
backend/app/: config.py  main.py
backend/app/agent/: agent_loop.py  tool_registry.py  tool_schema.py
backend/app/api/: chat_stream.py  deps.py
backend/app/core/: logging.py  security.py  telemetry.py
backend/app/db/: enums.py  models.py  session.py
backend/app/evals/: eval_logger.py
backend/app/guards/: input_guard.py  rate_limiter.py
backend/app/interaction/: clarification_engine.py  interaction_overlay.py  interaction_policy.py  policy_resolver.py  response_composer.py  tone_adapter.py
backend/app/memory/: context_compressor.py  embedding_service.py  memory_extractor.py  memory_manager.py  memory_models.py  memory_retriever.py  memory_store.py
backend/app/observability/: token_budget.py  tracer.py
backend/app/planner/: contracts.py  plan_generator.py  planning_prompts.py  semantic_planner.py  state_resolver.py  step_executor.py  task_manager.py  task_models.py
backend/app/reflection/: eval_logger.py  reflection_engine.py  reflection_prompts.py  reliability_controller.py
backend/app/runtime/: guard_pipeline.py  guards.py  postprocessor.py  reflection_pipeline.py  runtime_controller.py  state_manager.py  streaming_controller.py
backend/app/schemas/: auth.py  chat.py  common.py  conversations.py  uploads.py
backend/app/services/: artifact_service.py  conversation_service.py  execution_engine.py  intent_engine.py  llm_service.py  memory_service.py  model_service.py  (+4 more)
backend/mohab_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+28 files in other folders)
