[project]
name = "mohab-ai-backend"
version = "0.1.0"
description = "Production-grade backend for Mohab AI"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pgvector>=0.3.5,<1.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "httpx>=0.27.2,<1.0.0",
  "orjson>=3.10.7,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "temporalio>=1.7.0,<2.0.0",
  "opentelemetry-api>=1.28.0,<2.0.0",
  "opentelemetry-sdk>=1.28.0,<2.0.0",
  "opentelemetry-exporter-otlp>=1.28.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-httpx>=0.49b0,<1.0.0",
  "structlog>=24.4.0,<25.0.0",
  "redis>=5.0.8,<6.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "greenlet>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.4,<1.0.0",
  "mypy>=1.11.2,<2.0.0",
  "types-passlib>=1.7.7.20240819",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["tests/fixtures/"]
